objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Campaign_Medium__c</fullName>
        <description>Owen check with Jessica to get context As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Campaign Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Picklist__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Campaign Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Campaign_Content</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>Owen check with Jessica to get context As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Campaign source (e.g. Bing, Google, Facebook)</inlineHelpText>
        <label>Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Realtor Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Term__c</fullName>
        <description>Owen check with Jessica to get context As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Campaign Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>The 18 digit translation of the 15 digit SalesForce id. Different systems use
            different ids. As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_DTC_or_LO__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>if (and(isblank(Loan_Officer__c)=false,not(Referral_made_to_assigned_Loan_Officer__c)),"LO Referred","DTC")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel DTC or LO?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Consumer</fullName>
                    <default>true</default>
                    <label>Direct to Consumer</label>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Wants_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Client Wants Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>2019-10-11 - We need to get clarity on Close_Date__c vs. Close_Escrow_date. As
            of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_of_Escrow_Date__c</fullName>
        <description>Homebuyer only. This is the date we expect escrow (the close of the purchase)
            will take place. This field by the channel team (Ayesha), so that IM knows when the
            paperwork needs to be complete. Requested for visibility from RM; maps to
            opp.Close_of_Escrow_Date upon lead conversion. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Date Escrow Closes.</inlineHelpText>
        <label>Close of Escrow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date_Time__c</fullName>
        <description>Need definition and validation criteria As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Closed Lost Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Address__c</fullName>
        <description>The address of the Co-Applicant As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Address Street Name and Number (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Bankruptcy_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Co-Applicant: "Have you been
            involved in a bankruptcy proceeding within the past 7 years?" As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Bankruptcy (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_BirthDate__c</fullName>
        <description>2019-10-18 - Birthdate of the co-applicant. Used in many places. As of Q4-2019,
            this field has been identified by Business Systems (and relevant stakeholders) as used
            or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Co-Applicant BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Birth_Date_Free_Response__c</fullName>
        <description>A free text field that cerocds the co-applicants birthday. Scheduled for
            deletion. As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Birth Date (MM/DD/YYYY) (Co)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_City__c</fullName>
        <description>Current Address (city) of the co-applicant As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Address City (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Deed_of_Foreclosure__c</fullName>
        <description>Question on current HO and HB application for Co-Applicant: Have you ever given
            title or deed in lieu thereof or sold a property in a short sale?" As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Declaration Deed in Lieu (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Email__c</fullName>
        <description>Co-applicant's email address As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Email (Co)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Felony__c</fullName>
        <description>Question on current HO and HB application for Co-Applicant: "Have you ever been
            convicted of or plead guilty to a felony?" As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Felony (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_First_Name__c</fullName>
        <description>Co-applicant's first name As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>First Name (Co)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Foreclosure_Dropdown__c</fullName>
        <description>Question on current HO and HB application for Co-Applicant: "Have you ever had
            a property foreclosed upon?" As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Foreclosure (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Full_Name__c</fullName>
        <description>2019-10-18 - A formula that combines the first and last name. It's used by
            Docusign, templates. As of Q4-2019, this field has been identified by Business Systems
            (and relevant stakeholders) as used or otherwise relevant to current business processes.
            To be reviewed next Q4 2021.</description>
        <formula>Co_Applicant_First_Name__c &amp;" "&amp;Co_Applicant_Last_Name__c</formula>
        <label>Co-Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Last_Name__c</fullName>
        <description>Last name of the co-applicant. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Last Name (Co)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Phone__c</fullName>
        <description>Phone of co-applicant As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Phone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Postal_Code__c</fullName>
        <description>Co-applicant's current address (postal code) As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Address Zip / Postal Code (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Signed_Timestamp__c</fullName>
        <description>The timestamp of when Co_Applicant_Signed__c set. This field is updated by the
            lead service. As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Co-Applicant Signed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2019-10-18 - Checked when the co-applicant signs through the portal. The lead
            service is the process that sets this field. We do not think that this gets automatically
            populated by Docusign. It exists primarily to generate the
            Co_Applicant_Signed_Timestamp__c. Used by the application. As of Q4-2019, this field has
            been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Co-Applicant signed the online application.</inlineHelpText>
        <label>Co-Applicant Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Social_Security_Number__c</fullName>
        <description>The Social Security number of the co-applicant. As of Q4-2019, this field has
            been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>SSN / SIN (Co)</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_State__c</fullName>
        <description>The state of residence of the co-applicant. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>Address State (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_URL_Link__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>"app.unison.com/coapplicant/signature/" &amp; apply_online_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Applicant URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Application__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Complete Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_via_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Contact via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacted_Date_Time__c</fullName>
        <description>Timestamp of the first time we contacted user. Triggered by the creation of
            "Activity" object the first successful phone call to the person. If the call result
            field of the "Activity" object is set to "Missed calls", "Voice mail" and "Invalid
            number", then this is not generated. As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Contacted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Convert_MRDs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Converts minimum required documents to requirement records. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Convert MRDs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Convert_Net_Rental_Income_to_Currency__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( Converted_Income_Monthly_Net_Rental__c, ",", ""), ".00", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert Net Rental Income to Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_Total_REO_to_Currency__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>SUBSTITUTE(
SUBSTITUTE(Converted_Total_REO_Amount__c, ",", ""), ".00", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Convert Total REO to Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Converted Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Converted Account)</relationshipLabel>
        <relationshipName>Converted_Account_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Converted Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Converted Contact)</relationshipLabel>
        <relationshipName>Converted_Contact_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <description>The datetime that the lead became an opportunity. As of Q4-2019, this field has
            been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Converted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Converted_Income_Monthly_Net_Rental__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Converted Income Monthly Net Rental</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>If( IsConverted = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Converted Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads (Converted Opp)</relationshipLabel>
        <relationshipName>Converted_Opportunity_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Total_REO_Amount__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Converted Total REO Amount</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cookie__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Cookie</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Logic_Property_Id__c</fullName>
        <description>The CoreLogic id of the property. As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Core Logic Property Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_MSA__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Core MSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bend, OR</fullName>
                </value>
                <value>
                    <fullName>Eugene-Springfield, OR</fullName>
                </value>
                <value>
                    <fullName>Los Angeles-Long Beach-Anaheim, CA</fullName>
                </value>
                <value>
                    <fullName>Medford, OR</fullName>
                </value>
                <value>
                    <fullName>Napa, CA</fullName>
                </value>
                <value>
                    <fullName>Oxnard-Thousand Oaks-Ventura, CA</fullName>
                </value>
                <value>
                    <fullName>Portland-Vancouver-Beaverton, OR-WA</fullName>
                </value>
                <value>
                    <fullName>Salem, OR</fullName>
                </value>
                <value>
                    <fullName>San Diego-Carlsbad, CA</fullName>
                </value>
                <value>
                    <fullName>San Francisco-Oakland-Hayward, CA</fullName>
                </value>
                <value>
                    <fullName>San Jose-Sunnyvale-Santa Clara, CA</fullName>
                </value>
                <value>
                    <fullName>San Luis Obispo-Paso Robles-Arroyo Grande, CA</fullName>
                </value>
                <value>
                    <fullName>Santa Cruz-Watsonville, CA</fullName>
                </value>
                <value>
                    <fullName>Santa Maria-Santa Barbara, CA</fullName>
                </value>
                <value>
                    <fullName>Santa Rosa, CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Success_Factors__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Count Success Factors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_MRDs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The count of the required docs. When the number of uploaded docs equals the
            number of required docs, then the program specialist is notified. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Count of Requirements (MRD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Uploaded_MRDs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The count of the uploaded required docs. When the number of uploaded docs
            equals the number of required docs, then the program specialist is notified. As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Count of Uploaded Requirements (MRD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coupon_Banner__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>IF( 
Campaign_Content__c="C1807","Promotional Offer: $500 Gift Card at Closing", 

IF( 
Campaign_Content__c="D1807","Promotional Offer: $500 Gift Card at Closing", 

IF( 
Campaign_Content__c= "E1808","Promotional Offer: $500 Gift Card at Closing", 

IF( 
Campaign_Content__c="G1809","Promotional Offer: $500 Gift Card at Closing", 

IF( 
Campaign_Content__c="J1810","Promotional Offer: $500 Gift Card at Closing", 

NULL 

) 
) 
) 
) 
)</formula>
        <label>Coupon Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Box_Folder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2019-10-18 - Related to the creation of the box folder. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <inlineHelpText>This will manually create a Box folder for the Lead. It should only be used
            if an error occurs during the automatic creation.</inlineHelpText>
        <label>Create Box Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Date_Time__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Create_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_57min__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>CreatedDate - 0.03958333333333</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created -57min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Authorization_Over_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2019-10-18 - We think this field is no longer relevant, because the program
            specialists asks the customer, and the consent is captured by some other
            field.</description>
        <label>Credit Authorization Over Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Pre_Qualification_Status__c</fullName>
        <description>Status indicating whether the person is credit qualified. It is set
            automatically when Laser Credit pulls the credit. This is not the self-stated credit.
            No-match means that Laser credit wasn't able identify the person. As of Q4-2019, this
            field has been identified by Business Systems (and relevant stakeholders) as used or
            otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Credit Pre-Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Approved (Single score)</fullName>
                </value>
                <value>
                    <fullName>Declined (Single score)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>